--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -58,4 +58,12 @@
         <item>reboot_recovery</item>
         <item>reboot_bootloader</item>
     </string-array>
+
+    <!-- Whether device has an alert slider -->
+    <bool name="config_hasAlertSlider" translatable="false">false</bool>
+
+    <!-- The location of the device's alert slider:
+         0: Left side
+         1: Right side -->
+    <integer name="config_alertSliderLocation">0</integer>
 </resources>
