--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -57,6 +57,7 @@
         <item>restart</item>
         <item>reboot_recovery</item>
         <item>reboot_bootloader</item>
+        <item>reboot_sysui</item>
     </string-array>
 
     <!-- Whether device has an alert slider -->
