SystemUI: Tell user when face unlock detection is running
Google removed the animation on Android 12, let's use a text instead

Change-Id: I93c4121c57137764edb0b31678d103fd5f7d4dcc

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -84,4 +84,7 @@
 
     <!-- Autobrightness tile -->
     <string name="quick_settings_autobrightness_label">Auto brightness</string>
+
+    <!-- Face Unlock -->
+    <string name="face_unlock_recognizing">Recognizing face...</string>
 </resources>
