SystemUI: Add Autobrightness tile  [johnmart19]: - Rework for A12.1 environment - Launch Display Settings on long click
Co-authored-by: johnmart19 <johnivan19999@gmail.com>
Change-Id: I9a19c1266b3c54090e4a8d36b62bf55729ec5c9f

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -80,4 +80,7 @@
     <string name="global_action_reboot_recovery">Recovery</string>
     <string name="global_action_reboot_bootloader">Bootloader</string>
     <string name="global_action_settings">Settings</string>
+
+    <!-- Autobrightness tile -->
+    <string name="quick_settings_autobrightness_label">Auto brightness</string>
 </resources>
