--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -68,10 +68,10 @@
     <string name="vpn_credentials_dialog_connect">Connect</string>
 
     <!-- PowerShare QS tile -->
-    <string name="quick_settings_powershare_label">Wireless PowerShare</string>
-    <string name="quick_settings_powershare_off_powersave_label">Wireless PowerShare off\nBattery saver</string>
-    <string name="quick_settings_powershare_off_low_battery_label">Wireless PowerShare off\nBattery too low</string>
-    <string name="quick_settings_powershare_enabled_label">Wireless PowerShare is enabled</string>
+    <string name="quick_settings_powershare_label">Battery Share</string>
+    <string name="quick_settings_powershare_off_powersave_label">Battery Share off\nBattery saver</string>
+    <string name="quick_settings_powershare_off_low_battery_label">Battery Share off\nBattery too low</string>
+    <string name="quick_settings_powershare_enabled_label">Battery Share is enabled</string>
 
     <!-- Power Menu -->
     <string name="global_action_reboot">Restart</string>
